<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewProductActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_gap">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/new_product_name"
            android:text=""
            app:layout_row="0"
            app:layout_columnSpan="2" />

        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            android:hint="@string/new_product_description"
            android:text=""
            app:layout_column="0"
            app:layout_row="1"
            app:layout_columnSpan="2" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/new_product_default_price"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/product_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_upload_file_24"
            android:backgroundTint="@color/purple_500"
            android:text="@string/new_product_image"
            android:contentDescription="@string/new_product_image"
            app:layout_gravity="center_horizontal"
            app:layout_column="1"
            app:layout_row="2"
            app:tint="@color/white" />

        <Button
            android:id="@+id/add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_product_submit"
            android:enabled="false"
            app:layout_column="0"
            app:layout_row="3"
            app:layout_columnSpan="2" />

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="530dp"
            android:contentDescription="@string/new_product_selected_image"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_gravity="center_horizontal"
            app:layout_column="0"
            app:layout_row="4"
            app:layout_columnSpan="2" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>