<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/product_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/product_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_gap" >

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/new_product_selected_image"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_row="0"
                app:layout_column="0"
                app:layout_rowSpan="4" />

            <EditText
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_gap"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/new_product_name"
                app:layout_column="1"
                app:layout_row="0" />

            <EditText
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_gap"
                android:layout_marginEnd="@dimen/default_gap"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:maxWidth="250dp"
                android:text="@string/new_product_description"
                app:layout_column="1"
                app:layout_row="1"
                app:layout_columnSpan="2"/>

            <RatingBar
                android:id="@+id/product_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7"
                app:layout_gravity="center"
                android:rating="0"
                android:stepSize="1"
                app:layout_row="2"
                app:layout_column="1"
                app:layout_columnSpan="3"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:text="@string/product_currency"
                app:layout_column="0"
                app:layout_row="2"
                />

            <EditText
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/new_product_price"
                app:layout_column="0"
                app:layout_gravity="center_horizontal"
                app:layout_row="2" />

            <ToggleButton
                android:id="@+id/product_wishlist"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/product_wish"
                android:textOff=""
                android:textOn=""
                app:layout_gravity="end"
                android:background="@drawable/ic_toggle"
                android:backgroundTint="@color/heart"
                app:layout_column="2"
                app:layout_row="0" />

            <LinearLayout
                android:id="@+id/product_admin_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                app:layout_row="3"
                app:layout_column="0"
                app:layout_columnSpan="3" >

                <ImageButton
                    android:id="@+id/product_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_gap"
                    android:backgroundTint="@color/accent"
                    android:minWidth="100dp"
                    android:contentDescription="@string/product_edit"
                    app:srcCompat="@drawable/baseline_edit_24"
                    app:tint="@color/white"
                    app:layout_column="0" />

                <ImageButton
                    android:id="@+id/product_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_gap"
                    android:backgroundTint="@color/primary"
                    android:minWidth="100dp"
                    android:visibility="gone"
                    android:contentDescription="@string/product_save"
                    app:srcCompat="@drawable/baseline_save_24"
                    app:tint="@color/white"
                    app:layout_column="0" />

                <ImageButton
                    android:id="@+id/product_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_gap"
                    android:backgroundTint="@color/heart"
                    android:minWidth="100dp"
                    android:contentDescription="@string/product_delete"
                    app:srcCompat="@drawable/baseline_delete_24"
                    app:tint="@color/white"
                    app:layout_column="1" />

            </LinearLayout>

        </androidx.gridlayout.widget.GridLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>